# chloride

./: Algebra.h  CMakeLists.txt  CMakeSettings.json  README.md  chloride.cpp  chloride.h
engine/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Object.h  Stage.cpp  Stage.h
engine/components/: Mesh.cpp  Mesh.h
examples/: StaticMesh.cpp
glad/: glad.c  glad.h
graphic/: Interface.cpp  Interface.h  RenderHandler.cpp  RenderHandler.h  RenderManager.cpp  RenderManager.h  ShaderFactory.cpp  ShaderFactory.h
graphic/handler/: BaseMeshHandler.cpp  BaseMeshHandler.h
shader/: generic.frag  generic.vert
utils/: MeshFactory.cpp  MeshFactory.h  Singleton.h  Spinlock.h
